# dix

./: .deny.toml  .envrc  .gitignore  .rustfmt.toml  .taplo.toml  Cargo.toml  LICENSE.md  README.md  config.toml  flake.nix
.github/workflows/: build.yml  nix.yml  rust-clippy.yml
benches/: common.rs  print.rs  store.rs  util.rs
nix/: package.nix
src/: diff.rs  error.rs  json.rs  lib.rs  main.rs  print.rs  query_pkgs.sql  store.rs  util.rs  version.rs
src/store/: db_common.rs  db_eager.rs  db_lazy.rs  nix_command.rs  queries.rs  test_utils.rs
src/tests/: diff.rs
