[package]
name        = "dix"
description = "Diff Nix"
version     = "1.4.1"
license     = "GPL-3.0-only"
edition     = "2024"
homepage    = "https://github.com/faukah/dix"
repository  = "https://github.com/faukah/dix"
keywords    = [ "nix", "nixos" ]

[dependencies]
anyhow              = "1.0.98"
clap                = { features = [ "derive" ], version = "4.5.37" }
clap-verbosity-flag = "3.0.2"
derive_more         = { features = [ "full" ], version = "2.0.1" }
diff                = "0.1.13"
env_logger          = "0.11.3"
itertools           = "0.14.0"
log                 = "0.4.20"
ouroboros           = "0.18.5"
pathfinding         = "4.14.0"
regex               = "1.11.1"
rusqlite            = { features = [ "bundled" ], version = "0.38.0" }
size                = "0.5.0"
unicode-width       = "0.2.0"
yansi               = { features = [ "detect-env", "detect-tty" ], version = "1.0.1" }

[dev-dependencies]
proptest = "1.6.0"

[profile.release]
lto       = "fat"
opt-level = 3

# See:
#  <https://doc.rust-lang.org/rustc/lints/listing/allowed-by-default.html>
[lints.clippy]
cargo      = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
nursery    = { level = "warn", priority = -1 }
pedantic   = { level = "warn", priority = -1 }
perf       = { level = "warn", priority = -1 }
style      = { level = "warn", priority = -1 }

# The lint groups above enable some less-than-desirable rules, we should manually
# enable those to keep our sanity.
absolute_paths                       = "allow"
arbitrary_source_item_ordering       = "allow"
clone_on_ref_ptr                     = "warn"
dbg_macro                            = "warn"
empty_drop                           = "warn"
empty_structs_with_brackets          = "warn"
exit                                 = "warn"
filetype_is_file                     = "warn"
get_unwrap                           = "warn"
implicit_return                      = "allow"
infinite_loop                        = "warn"
map_with_unused_argument_over_ranges = "warn"
missing_docs_in_private_items        = "allow"
non_ascii_literal                    = "allow"
non_std_lazy_statics                 = "warn"
pathbuf_init_then_push               = "warn"
pattern_type_mismatch                = "allow"
question_mark_used                   = "allow"
rc_buffer                            = "warn"
rc_mutex                             = "warn"
rest_pat_in_fully_bound_structs      = "warn"
similar_names                        = "allow"
single_call_fn                       = "allow"
std_instead_of_core                  = "allow"
too_long_first_doc_paragraph         = "allow"
too_many_lines                       = "allow"
undocumented_unsafe_blocks           = "warn"
unnecessary_safety_comment           = "warn"
unused_result_ok                     = "warn"
unused_trait_names                   = "allow"

expect_used   = "warn"
print_stderr  = "warn"
print_stdout  = "warn"
todo          = "warn"
unimplemented = "warn"
unreachable   = "warn"
